# build-llm-cpp

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE
archive/src/: BytePairEncoding.cpp
archive/src/include/: BytePairEncoding.hpp
src/: BytePairEncoding.cpp  Log.cpp  Tokenizer.cpp  main.cpp  tests.cpp
src/include/: BytePairEncoding.hpp  Log.hpp  Matrix.hpp  Tensor.hpp  Tokenizer.hpp  main.hpp  tests.hpp
